# Noteriv

./: .gitignore  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
desktop/: .gitignore  README.md  SIGNING.md  next.config.ts  package-lock.json  package.json  tsconfig.json
desktop/main/: clipper-server.js  main.js  preload.js
desktop/scripts/: README.md  build-windows-portable.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.fixedruntime.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  clipper.rs  commands_dialog.rs  commands_fs.rs  commands_git.rs  commands_misc.rs  commands_shell.rs  commands_sync.rs  commands_vault.rs  commands_window.rs  commands_workspace.rs  lib.rs  main.rs  menu.rs  paths.rs  shim.rs  store.rs  updater_cmds.rs  watcher.rs
docs/: contributing.md  faq.md  index.md
docs/editor/: context-menu.md  focus-mode.md  formatting-toolbar.md  index.md  live-mode.md  source-mode.md  split-editor.md  view-mode.md  vim-mode.md
docs/features/: bookmarks.md  command-palette.md  daily-notes.md  dataview.md  file-recovery.md  flashcards.md  index.md  lint.md  multi-select.md  note-composer.md  note-history.md  search.md  tags.md  templates.md  (+1 more)
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
main/: auth.js  main.js  preload.js  store.js  updater.js
mcp/: README.md  index.js  package-lock.json  package.json
phone/: .gitignore  app.json  package-lock.json  package.json
(+279 files in other folders)
