[package]
name = "noteriv"
version = "2.0.1"
description = "Noteriv — markdown editor with plugins, themes, sync"
authors = ["Jace Sleeman <jace@noteriv.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "noteriv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# File watcher
notify = "6"
notify-debouncer-mini = "0.4"

# HTTP for clipper, GitHub API, WebDAV
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tiny_http = "0.12"

# (No OS keyring — see src/auth.rs for rationale. Disk-only matches Electron.)

# Encoding helpers
base64 = "0.22"
urlencoding = "2"
url = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Path utilities
dunce = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID-ish IDs (matches `Date.now().toString(36) + random` style in store.js)
rand = "0.8"

# Git timeout (std::process::Command has no native timeout)
wait-timeout = "0.2"

# WebDAV: minimal XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
